--- a/config/config.json
+++ b/config/config.json
@@ -16,11 +16,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "burgerList",
-    "host": "127.0.0.1",
-    "port": "8889",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
